[gd_scene load_steps=3 format=3 uid="uid://bqwelcome"]

[ext_resource type="Script" path="res://src/app/WelcomeScreen.gd" id="1"]
[ext_resource type="Theme" path="res://src/app/themes/DarkTheme.tres" id="2"]

[node name="WelcomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.102, 0.102, 0.18, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "STARGEN"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.65, 0.7, 1)
text = "Galaxy Generator"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 380)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="SettingsVBox" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="PresetContainer" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PresetLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/PresetContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Preset"

[node name="PresetOption" type="OptionButton" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/PresetContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
item_count = 6
selected = 0
popup/item_0/text = "Custom"
popup/item_1/text = "Milky Way"
popup/item_2/text = "Andromeda"
popup/item_3/text = "Whirlpool"
popup/item_4/text = "Sombrero"
popup/item_5/text = "Large Magellanic Cloud"

[node name="TypeSection" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TypeHeader" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/TypeSection"]
layout_mode = 2
alignment = 0
text = "â–¼  Galaxy Type"

[node name="TypeContent" type="MarginContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/TypeSection"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4

[node name="TypeVBox" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/TypeSection/TypeContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TypeRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/TypeSection/TypeContent/TypeVBox"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/TypeSection/TypeContent/TypeVBox/TypeRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Type"

[node name="TypeOption" type="OptionButton" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/TypeSection/TypeContent/TypeVBox/TypeRow"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Spiral"
popup/item_1/text = "Elliptical"
popup/item_2/text = "Irregular"

[node name="ArmsRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/TypeSection/TypeContent/TypeVBox"]
layout_mode = 2

[node name="ArmsLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/TypeSection/TypeContent/TypeVBox/ArmsRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Spiral Arms"

[node name="ArmsSlider" type="HSlider" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/TypeSection/TypeContent/TypeVBox/ArmsRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 2.0
max_value = 6.0
step = 1.0
value = 4.0

[node name="ArmsValue" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/TypeSection/TypeContent/TypeVBox/ArmsRow"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "4"
horizontal_alignment = 2

[node name="StructureSection" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StructureHeader" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection"]
layout_mode = 2
alignment = 0
text = "â–¶  Structure"

[node name="StructureContent" type="MarginContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4

[node name="StructureVBox" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PitchRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox"]
layout_mode = 2

[node name="PitchLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/PitchRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Arm Pitch Angle"

[node name="PitchSlider" type="HSlider" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/PitchRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 10.0
max_value = 30.0
step = 0.5
value = 14.0

[node name="PitchValue" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/PitchRow"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "14.0Â°"
horizontal_alignment = 2

[node name="AmplitudeRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox"]
layout_mode = 2

[node name="AmplitudeLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/AmplitudeRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Arm Definition"

[node name="AmplitudeSlider" type="HSlider" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/AmplitudeRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 0.3
max_value = 0.9
step = 0.05
value = 0.65

[node name="AmplitudeValue" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/AmplitudeRow"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0.65"
horizontal_alignment = 2

[node name="BulgeIntensityRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox"]
layout_mode = 2

[node name="BulgeIntensityLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/BulgeIntensityRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Core Brightness"

[node name="BulgeIntensitySlider" type="HSlider" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/BulgeIntensityRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 0.3
max_value = 1.2
step = 0.05
value = 0.8

[node name="BulgeIntensityValue" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/BulgeIntensityRow"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0.80"
horizontal_alignment = 2

[node name="BulgeRadiusRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox"]
layout_mode = 2

[node name="BulgeRadiusLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/BulgeRadiusRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Core Size"

[node name="BulgeRadiusSlider" type="HSlider" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/BulgeRadiusRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 1000.0
max_value = 2500.0
step = 50.0
value = 1500.0

[node name="BulgeRadiusValue" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/BulgeRadiusRow"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "1500 pc"
horizontal_alignment = 2

[node name="EllipticityRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox"]
layout_mode = 2

[node name="EllipticityLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/EllipticityRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ellipticity"

[node name="EllipticitySlider" type="HSlider" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/EllipticityRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 0.0
max_value = 0.7
step = 0.05
value = 0.3

[node name="EllipticityValue" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/EllipticityRow"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0.30"
horizontal_alignment = 2

[node name="IrregularityRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox"]
layout_mode = 2

[node name="IrregularityLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/IrregularityRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Irregularity"

[node name="IrregularitySlider" type="HSlider" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/IrregularityRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.05
value = 0.5

[node name="IrregularityValue" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/StructureSection/StructureContent/StructureVBox/IrregularityRow"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0.50"
horizontal_alignment = 2

[node name="SizeSection" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SizeHeader" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection"]
layout_mode = 2
alignment = 0
text = "â–¶  Size & Density"

[node name="SizeContent" type="MarginContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4

[node name="SizeVBox" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RadiusRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox"]
layout_mode = 2

[node name="RadiusLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox/RadiusRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Galaxy Radius"

[node name="RadiusSlider" type="HSlider" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox/RadiusRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 10000.0
max_value = 25000.0
step = 500.0
value = 15000.0

[node name="RadiusValue" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox/RadiusRow"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
text = "15000 pc"
horizontal_alignment = 2

[node name="DiskLengthRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox"]
layout_mode = 2

[node name="DiskLengthLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox/DiskLengthRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Disk Scale Length"

[node name="DiskLengthSlider" type="HSlider" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox/DiskLengthRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 2000.0
max_value = 6000.0
step = 100.0
value = 4000.0

[node name="DiskLengthValue" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox/DiskLengthRow"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
text = "4000 pc"
horizontal_alignment = 2

[node name="DiskHeightRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox"]
layout_mode = 2

[node name="DiskHeightLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox/DiskHeightRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Disk Thickness"

[node name="DiskHeightSlider" type="HSlider" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox/DiskHeightRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 200.0
max_value = 500.0
step = 10.0
value = 300.0

[node name="DiskHeightValue" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox/DiskHeightRow"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
text = "300 pc"
horizontal_alignment = 2

[node name="DensityRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox"]
layout_mode = 2

[node name="DensityLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox/DensityRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Star Density"

[node name="DensitySlider" type="HSlider" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox/DensityRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="DensityValue" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SizeSection/SizeContent/SizeVBox/DensityRow"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "1.0x"
horizontal_alignment = 2

[node name="SeedContainer" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SeedLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SeedContainer"]
layout_mode = 2
text = "Seed"

[node name="SeedSpin" type="SpinBox" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 999999.0
value = 12345.0

[node name="RandomizeButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/ScrollContainer/SettingsVBox/SeedContainer"]
layout_mode = 2
text = "ðŸŽ²"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StartButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/Buttons"]
layout_mode = 2
text = "Generate Galaxy"

[node name="LoadButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/Buttons"]
layout_mode = 2
text = "Load Galaxy"

[node name="QuitButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/Buttons"]
layout_mode = 2
text = "Quit"
